# openai-play

./: .gitignore  README.md  agi.py  completions.py  cot_x_structured_output.py  pyproject.toml  reAct.py  serper_p.py  structured_json.py  structured_output.py  tavily_search.py
auto_gen/: auto_gen.py  roast.py
multi_agent/: main.py
multi_agent/agent/: agent.py  orchestrator.py
multi_agent/prompt/: prompt.py
multi_agent/state/: state.py
tool_use/: main.py
tool_use/agents/: agents.py
tool_use/models/: ollama_model.py  openai_model.py
tool_use/prompts/: prompt.py
tool_use/toolbox/: toolbox.py
tool_use/tools/: calculator.py  reverser.py
