[tool.poetry]
name = "openai-play"
version = "0.1.0"
description = ""
authors = ["namsgit <namanbhulawat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
openai = "^1.40.6"
httpx = "^0.27.0"
tavily-python = "^0.3.7"
python-dotenv = "^1.0.1"
cohere = "^5.8.0"
pymongo = "^4.8.0"
termcolor = "^2.4.0"
pyautogen = "^0.2.34"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
